CAS-94: Fix feedback plugin radio button alignment

--- a/moodle/theme/cass/scss/_plugins.scss
+++ b/moodle/theme/cass/scss/_plugins.scss
@@ -12,6 +12,13 @@ a#snap-home {
 }
 
 /**
+ * Feedback plugin.
+ */
+.path-mod-feedback input[type="radio"] {
+    margin-bottom: 0;
+}
+
+/**
  * Mod assignment page.
  */
 
